parser10/tree-sitter-able/test/corpus/iterator_literals.txt
=================
Iterator Literals
=================

fn make_iter(start, finish) {
  Iterator i32 { gen =>
    i := start
    while i < finish {
      gen.yield(i)
      i = i + 1
    }
    gen.stop()
  }
}

fn ad_hoc(xs) {
  Iterator { driver =>
    for x in xs {
      if x % 2 == 0 {
        driver.yield(x)
      }
    }
  }
}
---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (pattern_base
          (identifier)))
      (parameter
        (pattern_base
          (identifier))))
    (block
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (iterator_literal
                                              (type_union
                                                (type_arrow
                                                  (type_suffix
                                                    (type_prefix
                                                      (type_atom
                                                        (type_identifier
                                                          (qualified_identifier
                                                            (identifier))))))))
                                              (identifier)
                                              (iterator_body
                                                (expression_statement
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (assignment_target
                                                          (pattern_base
                                                            (identifier)))
                                                        (assignment_operator)
                                                        (assignment_expression
                                                          (range_expression
                                                            (logical_or_expression
                                                              (logical_and_expression
                                                                (bitwise_or_expression
                                                                  (bitwise_xor_expression
                                                                    (bitwise_and_expression
                                                                      (equality_expression
                                                                        (comparison_expression
                                                                          (shift_expression
                                                                            (additive_expression
                                                                              (multiplicative_expression
                                                                                (unary_expression
                                                                                  (exponent_expression
                                                                                    (postfix_expression
                                                                                      (primary_expression
                                                                                        (identifier)))))))))))))))))))))
                                                (while_statement
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier))))))))
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier)))))))))))))))))))
                                                  (block
                                                    (expression_statement
                                                      (pipe_expression
                                                        (matchable_expression
                                                          (assignment_expression
                                                            (range_expression
                                                              (logical_or_expression
                                                                (logical_and_expression
                                                                  (bitwise_or_expression
                                                                    (bitwise_xor_expression
                                                                      (bitwise_and_expression
                                                                        (equality_expression
                                                                          (comparison_expression
                                                                            (shift_expression
                                                                              (additive_expression
                                                                                (multiplicative_expression
                                                                                  (unary_expression
                                                                                    (exponent_expression
                                                                                      (postfix_expression
                                                                                        (primary_expression
                                                                                          (identifier))
                                                                                        (member_access
                                                                                          (identifier))
                                                                                        (call_suffix
                                                                                          (pipe_expression
                                                                                            (matchable_expression
                                                                                              (assignment_expression
                                                                                                (range_expression
                                                                                                  (logical_or_expression
                                                                                                    (logical_and_expression
                                                                                                      (bitwise_or_expression
                                                                                                        (bitwise_xor_expression
                                                                                                          (bitwise_and_expression
                                                                                                            (equality_expression
                                                                                                              (comparison_expression
                                                                                                                (shift_expression
                                                                                                                  (additive_expression
                                                                                                                    (multiplicative_expression
                                                                                                                      (unary_expression
                                                                                                                        (exponent_expression
                                                                                                                          (postfix_expression
                                                                                                                            (primary_expression
                                                                                                                              (identifier))))))))))))))))))))))))))))))))))))))
                                                    (expression_statement
                                                      (pipe_expression
                                                        (matchable_expression
                                                          (assignment_expression
                                                            (assignment_target
                                                              (postfix_expression
                                                                (primary_expression
                                                                  (identifier))))
                                                            (assignment_operator)
                                                            (assignment_expression
                                                              (range_expression
                                                                (logical_or_expression
                                                                  (logical_and_expression
                                                                    (bitwise_or_expression
                                                                      (bitwise_xor_expression
                                                                        (bitwise_and_expression
                                                                          (equality_expression
                                                                            (comparison_expression
                                                                              (shift_expression
                                                                                (additive_expression
                                                                                  (multiplicative_expression
                                                                                    (unary_expression
                                                                                      (exponent_expression
                                                                                        (postfix_expression
                                                                                          (primary_expression
                                                                                            (identifier))))))
                                                                                  (multiplicative_expression
                                                                                    (unary_expression
                                                                                      (exponent_expression
                                                                                        (postfix_expression
                                                                                          (primary_expression
                                                                                            (number_literal)))))))))))))))))))))))
                                                (expression_statement
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier))
                                                                                    (member_access
                                                                                      (identifier))
                                                                                    (call_suffix))))))))))))))))))))))))))))))))))))))))))
  (function_definition
    (identifier)
    (parameter_list
      (parameter
        (pattern_base
          (identifier))))
    (block
      (expression_statement
        (pipe_expression
          (matchable_expression
            (assignment_expression
              (range_expression
                (logical_or_expression
                  (logical_and_expression
                    (bitwise_or_expression
                      (bitwise_xor_expression
                        (bitwise_and_expression
                          (equality_expression
                            (comparison_expression
                              (shift_expression
                                (additive_expression
                                  (multiplicative_expression
                                    (unary_expression
                                      (exponent_expression
                                        (postfix_expression
                                          (primary_expression
                                            (iterator_literal
                                              (identifier)
                                              (iterator_body
                                                (for_statement
                                                  (pattern_base
                                                    (identifier))
                                                  (pipe_expression
                                                    (matchable_expression
                                                      (assignment_expression
                                                        (range_expression
                                                          (logical_or_expression
                                                            (logical_and_expression
                                                              (bitwise_or_expression
                                                                (bitwise_xor_expression
                                                                  (bitwise_and_expression
                                                                    (equality_expression
                                                                      (comparison_expression
                                                                        (shift_expression
                                                                          (additive_expression
                                                                            (multiplicative_expression
                                                                              (unary_expression
                                                                                (exponent_expression
                                                                                  (postfix_expression
                                                                                    (primary_expression
                                                                                      (identifier)))))))))))))))))))
                                                  (block
                                                    (expression_statement
                                                      (pipe_expression
                                                        (matchable_expression
                                                          (assignment_expression
                                                            (range_expression
                                                              (logical_or_expression
                                                                (logical_and_expression
                                                                  (bitwise_or_expression
                                                                    (bitwise_xor_expression
                                                                      (bitwise_and_expression
                                                                        (equality_expression
                                                                          (comparison_expression
                                                                            (shift_expression
                                                                              (additive_expression
                                                                                (multiplicative_expression
                                                                                  (unary_expression
                                                                                    (exponent_expression
                                                                                      (postfix_expression
                                                                                        (primary_expression
                                                                                          (if_expression
                                                                                            (pipe_expression
                                                                                              (matchable_expression
                                                                                                (assignment_expression
                                                                                                  (range_expression
                                                                                                    (logical_or_expression
                                                                                                      (logical_and_expression
                                                                                                        (bitwise_or_expression
                                                                                                          (bitwise_xor_expression
                                                                                                            (bitwise_and_expression
                                                                                                              (equality_expression
                                                                                                                (comparison_expression
                                                                                                                  (shift_expression
                                                                                                                    (additive_expression
                                                                                                                      (multiplicative_expression
                                                                                                                        (unary_expression
                                                                                                                          (exponent_expression
                                                                                                                            (postfix_expression
                                                                                                                              (primary_expression
                                                                                                                                (identifier)))))
                                                                                                                        (unary_expression
                                                                                                                          (exponent_expression
                                                                                                                            (postfix_expression
                                                                                                                              (primary_expression
                                                                                                                                (number_literal)))))))))
                                                                                                                (comparison_expression
                                                                                                                  (shift_expression
                                                                                                                    (additive_expression
                                                                                                                      (multiplicative_expression
                                                                                                                        (unary_expression
                                                                                                                          (exponent_expression
                                                                                                                            (postfix_expression
                                                                                                                              (primary_expression
                                                                                                                                (number_literal)))))))))))))))))))
                                                                                            (block
                                                                                              (expression_statement
                                                                                                (pipe_expression
                                                                                                  (matchable_expression
                                                                                                    (assignment_expression
                                                                                                      (range_expression
                                                                                                        (logical_or_expression
                                                                                                          (logical_and_expression
                                                                                                            (bitwise_or_expression
                                                                                                              (bitwise_xor_expression
                                                                                                                (bitwise_and_expression
                                                                                                                  (equality_expression
                                                                                                                    (comparison_expression
                                                                                                                      (shift_expression
                                                                                                                        (additive_expression
                                                                                                                          (multiplicative_expression
                                                                                                                            (unary_expression
                                                                                                                              (exponent_expression
                                                                                                                                (postfix_expression
                                                                                                                                  (primary_expression
                                                                                                                                    (identifier))
                                                                                                                                  (member_access
                                                                                                                                    (identifier))
                                                                                                                                  (call_suffix
                                                                                                                                    (pipe_expression
                                                                                                                                      (matchable_expression
                                                                                                                                        (assignment_expression
                                                                                                                                          (range_expression
                                                                                                                                            (logical_or_expression
                                                                                                                                              (logical_and_expression
                                                                                                                                                (bitwise_or_expression
                                                                                                                                                  (bitwise_xor_expression
                                                                                                                                                    (bitwise_and_expression
                                                                                                                                                      (equality_expression
                                                                                                                                                        (comparison_expression
                                                                                                                                                          (shift_expression
                                                                                                                                                            (additive_expression
                                                                                                                                                              (multiplicative_expression
                                                                                                                                                                (unary_expression
                                                                                                                                                                  (exponent_expression
                                                                                                                                                                    (postfix_expression
                                                                                                                                                                      (primary_expression
                                                                                                                                                                        (identifier)))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))
